fix: TalentTreeGUI & Handler